--- a/DOM/list/simple.html
+++ b/DOM/list/simple.html
@@ -7,7 +7,7 @@
     <title>List</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/animate.css" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/simple.css" />
   </head>
   <body>
     <div class="container">
@@ -30,6 +30,6 @@
       </div>
     </div>
 
-    <script src="./js/index.js"></script>
+    <script src="./js/simple.js"></script>
   </body>
 </html>
