--- a/DOM/lift/index.html
+++ b/DOM/lift/index.html
@@ -10,7 +10,19 @@
 </head>
 <body>
   <div class="container">
-    
+    <ul class="pages">
+      <li class="pageActive">111</li>
+      <li>222</li>
+      <li>333</li>
+      <li>444</li>
+    </ul>
+
+    <ul class="btns">
+      <li  class="btnActive">壹</li>
+      <li>贰</li>
+      <li>叁</li>
+      <li>肆</li>
+    </ul>
   </div>
 
 
